@@ -42,6 +42,7 @@ controls.show = Show
 controls.hide = Hide
 controls.no-friction = No Friction
 controls.lots-of-friction=Lots of Friction
+controls.return-object = Return Object
 
 surface.ice = ice
 surface.concrete = concrete
